@@ -8,6 +8,7 @@ CHANGELOG Roundcube Webmail
 - Fix XSS issue in SVG images handling (#1490625)
 - Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#1490643)
 - Fix bug where Archive/Junk buttons were not active after page jump with select=all mode (#1490647)
+- Fix bug in long recipients list parsing for cases where recipient name contained @-char (#1490653)
 
 RELEASE 1.1.4
 -------------
